# ldap-aggregate

./: .gitignore  LICENSE  README.md  README.rst  ldap-aggregate.cabal  ldaprelay.cabal
examples/: auditlog.ldif  ldap-aggregate.yml  ldaprelay.cfg  test.yml  testldap.hs
src/: Aggregate.hs  Auditlog.hs  CombEditor.hs  Config.hs  DITs.hs  Editor.hs  LDAPAggregate.hs  LDAPRelay.hs  LDIF.hs  Main.hs  Settings.hs  SimpleLDIF.hs
src/Aggregate/: Aggregator.hs  Alter.hs  Auditlog.hs  Config.hs  Criterion.hs  DITs.hs  Edit.hs  LDAP.hs
src/CombEditor/: Criterion.hs  Edit.hs
src/Editor/: Edit.hs  Rules.hs
src/LDAPAggregate/: Alter.hs  DirectoryTree.hs  Filter.hs  LDAP.hs  Rewrite.hs  Types.hs
src/LDAPRelay/: DirectoryTree.hs  Filter.hs  Rewrite.hs  Types.hs  Utils.hs
src/LDIF/: Apply.hs  Compare.hs  Diff.hs  Editor.hs  LDAP.hs  Parser.hs  Preproc.hs  Simple.hs  Types.hs  Utils.hs
src/LDIF/Editor/: Edit.hs  Rules.hs
src/SimpleLDIF/: Apply.hs  Diff.hs  Parser.hs  Preproc.hs  Types.hs  Utils.hs
tests/: AggregateTest.hs  AggregateTests.hs  AlterTests.hs  DITTests.hs  EditTests.hs  LdifTests.hs  RelayTests.hs  RewriteTests.hs  TestData.hs  TestRelay.hs  TestUtils.hs  clear-trees.hs  create-dit.sh  create-test-db.sh  dit.yml  modtree.sh  populate.hs  reset.sh  setup-tree.sh  setup-trees.hs  showtree.sh  source.ldif  target.ldif  test.hs  test.yml  tests.hs  update-trees.hs
tests/ldif/: from.ldif  olcDatabase.ldif  source.create.ldif  source.dit.ldif  source.populate.ldif  source.update.ldif  source.update2.ldif  target.create.ldif  target.dit.ldif  target.populate.ldif  target.tree.ldif  to.ldif
