name:          ldaprealy
category:      Application
version:       0.1
stability:     unstable
author:        Jonas Juselius
maintainer:    Jonas Juselius <jonas.juselius@uit.no>
license:       OtherLicense
license-file:  LICENSE.rst
copyright:     Copyright (C) 2014 Jonas Juselius
cabal-version: >= 1.8
homepage:      https://source.uit.no/jonas/ldaprelay
bug-reports:   https://source.uit.no/jonas/ldaprelay/issues
build-type:    Simple
synopsis:      Haskell LDAP relay program and library
description:
    LDAP realy
    .
    Realy and rewrite LDAP data from one DIT to another.

extra-source-files: 
    README.rst
    .gitignore

source-repository head
  type: git
  location: git@source.uit.no:jonas/ldaprealy.git

flag test-properties
  default: True
  manual: True

library
  exposed-modules:
    Settings
    LDIF.Simple
  build-depends:
      base
    , mtl
    , ConfigFile
    , LDAP
    , ldif
    , bytestring
    , parsec
  hs-source-dirs: src
  ghc-options:
    -Wall -O2
    -fwarn-tabs
    -fdicts-cheap
    -funbox-strict-fields
    -fmax-simplifier-iterations=10

executable ldaprealy.bin
  main-is: Main.hs
  build-depends:
      base
    , mtl
    , regex-posix
    , ConfigFile
    , bytestring
    , ldif
    , parsec
  hs-source-dirs: src
  ghc-options:
     -Wall -O2
    -fwarn-tabs
    -fdicts-cheap
    -funbox-strict-fields
    -fmax-simplifier-iterations=10

test-suite properties
  type: exitcode-stdio-1.0
  main-is: properties.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  if !flag(test-properties)
    buildable: False
  else
    build-depends:
        base
      , QuickCheck                 >= 2.4

benchmark performance
  type:           exitcode-stdio-1.0
  main-is:        perf.hs
  ghc-options:    -w -O2 -threaded -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: benchmarks
  build-depends:
      base
    , time

