name:          ldaprelay
category:      Application
version:       0.1
stability:     unstable
author:        Jonas Juselius <jonas.juselius@uit.no>,
               Radoslav Dorcik <radoslav.dorcik@gmail.com>
maintainer:    Jonas Juselius <jonas.juselius@uit.no>
license:       BSD3
license-file:  LICENSE.rst
copyright:     Copyright (C) 2014 Jonas Juselius
cabal-version: >= 1.8
homepage:      https://source.uit.no/jonas/ldaprelay
bug-reports:   https://source.uit.no/jonas/ldaprelay/issues
build-type:    Simple
synopsis:      Haskell LDAP relay program and library
description:
    LDAP relay
    .
    Relay and rewrite LDAP data from one DIT to another.

extra-source-files:
    README.rst
    .gitignore

source-repository head
    type: git
    location: git@source.uit.no:hpc/ldaprelay.git

flag test-properties
    default: True
    manual: True

library
    exposed-modules:
        LDIF
        LDAPRelay
    build-depends:
          base
        , mtl
        , LDAP
        , ldif
        , bytestring
        , parsec
        , regexpr
        , regex-posix
        , unordered-containers
    other-modules: Paths_ldaprelay
    hs-source-dirs: src
    ghc-options:
        -Wall -O2
        -fwarn-tabs
        -fdicts-cheap
        -funbox-strict-fields
        -fmax-simplifier-iterations=10

executable ldaprelay.bin
    main-is: Main.hs
    build-depends:
          base
        , mtl
        , regex-posix
        , regexpr
        , bytestring
        , ldif
        , parsec
        , LDAP
        , unordered-containers
        , configurator
    other-modules: Paths_ldaprelay
    hs-source-dirs: src
    ghc-options:
         -Wall -O2
        -fwarn-tabs
        -fdicts-cheap
        -funbox-strict-fields
        -fmax-simplifier-iterations=10

test-suite tests
    type: exitcode-stdio-1.0
    main-is: test.hs
    ghc-options:
        -w -threaded -rtsopts -with-rtsopts=-N
        -fhpc
    hs-source-dirs: tests, src
    if !flag(test-properties)
        buildable: False
    else
        build-depends:
              base
            , mtl
            , QuickCheck
            , regex-posix
            , bytestring
            , ldif
            , parsec
            , LDAP
            , regexpr
            , unordered-containers
            , tasty
            , tasty-quickcheck
            , tasty-hunit
    other-modules: Paths_ldaprelay

benchmark performance
    type:           exitcode-stdio-1.0
    main-is:        perf.hs
    ghc-options: -w -O2 -threaded 
        -fdicts-cheap -funbox-strict-fields
    hs-source-dirs: benchmarks, src
    build-depends:
          base
        , time

